--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -74,6 +74,7 @@ jobs:
             [self-hosted, macos, arm64, 13, test],
             [self-hosted, macos, arm64, 14, test],
           ]
+        test-command: ['test-e2e-vm-serial', 'test-e2e-container']
     runs-on: ${{ matrix.os }}
     steps:
       - run: echo "Skipping CI for docs & contrib files"
