ci: update release script to embed Info.plists
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/build-pkg.yaml
+++ b/.github/workflows/build-pkg.yaml
@@ -49,7 +49,7 @@ jobs:
           cache: true
       - name: Build for macOS ${{ inputs.version }} (${{ inputs.output_arch }})
         run: |
-          brew install lz4 automake autoconf libtool yq
+          brew install lz4 automake autoconf libtool yq llvm
           git status
           git clean -f -d
           make clean
