--- a/.github/workflows/sync-submodules-and-deps.yaml
+++ b/.github/workflows/sync-submodules-and-deps.yaml
@@ -34,18 +34,6 @@ jobs:
         run: |
           git submodule update --remote
 
-      - name: Update OS image
-        run: |
-          ./.github/bin/update-os-image.sh
-
-      - name: Update lima dependencies url
-        run: |
-          ./deps/finch-core/bin/update-deps.sh -d ${{ secrets.DEPENDENCY_BUCKET_NAME }}
-
-      - name: Update rootfs
-        run: |
-          ./deps/finch-core/bin/update-rootfs.sh -d ${{ secrets.DEPENDENCY_BUCKET_NAME }}
-
       - name: Create PR
         uses: peter-evans/create-pull-request@c5a7806660adbe173f04e3e038b0ccdcd758773c # v6.1.0
         with:
@@ -55,9 +43,9 @@ jobs:
           body: >
             Bump for Finch's dependencies.
 
-            Currently, this updates values based on artifacts defined in the finch-core repository,
-            such as: operating system images, and the version of Lima (and it's dependencies),
-            which are bundled as `lima-and-qemu.macos-*.*.tar.gz` archives.
+            Updates finch-core submodule which defines the core dependencies for Finch on each respective
+            platform such as: operating system images and Lima bundle (Lima version and it's dependencies)
+            as `lima-and-qemu.macos-*.*.tar.gz` archives.
 
             Since updating the Lima version may also update the default version of the `nerdctl-full`
             archive (which contains nerdctl, containerd, buildkit, etc.), this may require a manual
