--- a/Makefile.darwin
+++ b/Makefile.darwin
@@ -12,7 +12,7 @@ FINCH_OS_BASENAME=$(AARCH64_ARTIFACT)
 FINCH_OS_DIGEST=$(AARCH64_512_DIGEST)
 endif
 
-# This variable is used to generate release builds, where the OS iamge path should be overwritten
+# This variable is used to generate release builds, where the OS image path should be overwritten
 # to /Applications/Finch/...
 FINCH_OS_IMAGE_LOCATION_ROOT ?= $(DEST)
 FINCH_IMAGE_LOCATION := $(FINCH_OS_IMAGE_LOCATION_ROOT)/os/$(FINCH_OS_BASENAME)
