add input to workflow_dispatch so this workflow can be manually run on different branches/tags
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/build-and-test-msi.yaml
+++ b/.github/workflows/build-and-test-msi.yaml
@@ -3,6 +3,10 @@ name: Build, test and upload .msi to S3
 # TODO: add scheduler and tests
 on:
   workflow_dispatch:
+    inputs:
+      ref_name:
+        required: true
+        type: string
   workflow_call:
     inputs:
       ref_name:
