--- a/.github/workflows/build-and-test-msi.yaml
+++ b/.github/workflows/build-and-test-msi.yaml
@@ -69,7 +69,7 @@ jobs:
           pip install awscli
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
-          ref: ${{ needs.get-tag-name.outputs.tag }}
+          ref: "windows-1.2.1-build"
           fetch-depth: 0
           persist-credentials: false
           submodules: recursive
