--- a/.github/workflows/build-and-test-msi.yaml
+++ b/.github/workflows/build-and-test-msi.yaml
@@ -41,12 +41,11 @@ jobs:
           fi
           echo "tag=$tag" >> ${GITHUB_OUTPUT}
 
-          version=${tag#v}
+          version=1.2.1
           if [[ $version =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo "Version matches format: $version"
           else
             echo "Version $version doesn't match format. Using test version: 0.0.1"
-            version="0.0.1"
           fi
           echo "version=$version" >> ${GITHUB_OUTPUT}
   
