ci: drop macOS 11 runners in packager testing
Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/.github/workflows/build-and-test-pkg.yaml
+++ b/.github/workflows/build-and-test-pkg.yaml
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [11, 13, 14]
+        version: [13, 14]
     needs:
       - get-tag-name
       - macos-aarch64-pkg-build
@@ -73,7 +73,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [11, 13, 14]
+        version: [13, 14]
     needs:
       - get-tag-name
       - macos-x86-64-pkg-build
