--- a/.github/workflows/build-and-test-msi.yaml
+++ b/.github/workflows/build-and-test-msi.yaml
@@ -199,6 +199,9 @@ jobs:
           aws-region: ${{ secrets.REGION }}
       - name: Remove Finch VM
         run: |
+          # We want these cleanup commands to always run, ignore errors so the step completes.
+          $ErrorActionPreference = 'Ignore'
+          taskkill /f /im wslservice.exe 2> nul || cmd /c "exit /b 0"
           wsl --list --verbose
           wsl --shutdown
           wsl --unregister lima-finch
@@ -241,6 +244,9 @@ jobs:
             make test-e2e-vm
       - name: Remove Finch VM
         run: |
+          # We want these cleanup commands to always run, ignore errors so the step completes.
+          $ErrorActionPreference = 'Ignore'
+          taskkill /f /im wslservice.exe 2> nul || cmd /c "exit /b 0"
           wsl --list --verbose
           wsl --shutdown
           Start-Sleep -s 10
