revert temporary changes to workflows
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -17,6 +17,8 @@ on:
       - 'contrib/**'
       - '.github/CODEOWNERS'
   pull_request:
+    branches:
+      - main
     paths:
       - '**.md'
       - 'contrib/**'
