--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,11 +10,13 @@ on:
       - "contrib/**"
       - ".github/CODEOWNERS"
   pull_request:
+    branches:
+      - main
     paths:
-      - '**.go'
-      - 'contrib/packaging/**'
-      - '!contrib/hello-finch/**'
-      - '!.github/CODEOWNERS'
+      - "**.go"
+      - "contrib/packaging/**"
+      - "!contrib/hello-finch/**"
+      - "!.github/CODEOWNERS"
   workflow_dispatch:
 permissions:
   id-token: write
@@ -141,34 +143,34 @@ jobs:
           go-version-file: go.mod
           cache: true
       - run: make check-licenses
-  # macos-e2e-tests:
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       arch: ["X64", "arm64"]
-  #       version: ["13", "14"]
-  #       runner-type: ["test"]
-  #       test-command: ["test-e2e-vm-serial", "test-e2e-container"]
-  #   uses: ./.github/workflows/e2e-macos.yaml
-  #   secrets: inherit
-  #   with:
-  #     arch: ${{ matrix.arch }}
-  #     version: ${{ matrix.version }}
-  #     runner-type: ${{ matrix.runner-type }}
-  #     test-command: ${{ matrix.test-command }}
-  # windows-e2e-tests:
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       arch: ["X64"]
-  #       runner-type: ["test"]
-  #       test-command: ["test-e2e-vm-serial", "test-e2e-container"]
-  #   uses: ./.github/workflows/e2e-windows.yaml
-  #   secrets: inherit
-  #   with:
-  #     arch: ${{ matrix.arch }}
-  #     runner-type: ${{ matrix.runner-type }}
-  #     test-command: ${{ matrix.test-command }}
+  macos-e2e-tests:
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: ["X64", "arm64"]
+        version: ["13", "14"]
+        runner-type: ["test"]
+        test-command: ["test-e2e-vm-serial", "test-e2e-container"]
+    uses: ./.github/workflows/e2e-macos.yaml
+    secrets: inherit
+    with:
+      arch: ${{ matrix.arch }}
+      version: ${{ matrix.version }}
+      runner-type: ${{ matrix.runner-type }}
+      test-command: ${{ matrix.test-command }}
+  windows-e2e-tests:
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: ["X64"]
+        runner-type: ["test"]
+        test-command: ["test-e2e-vm-serial", "test-e2e-container"]
+    uses: ./.github/workflows/e2e-windows.yaml
+    secrets: inherit
+    with:
+      arch: ${{ matrix.arch }}
+      runner-type: ${{ matrix.runner-type }}
+      test-command: ${{ matrix.test-command }}
   linux-e2e-tests:
     strategy:
       fail-fast: false
