fix path to finch dir
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/e2e-linux.yaml
+++ b/.github/workflows/e2e-linux.yaml
@@ -75,7 +75,7 @@ jobs:
           sudo systemctl stop containerd.service
           sudo systemctl daemon-reload
           sudo rm -rf /etc/finch
-          sudo rm -rf /var/finch
+          sudo rm -rf /var/lib/finch
           sudo rm -rf /var/lib/containerd
           sudo rm -rf /var/soci-snapshotter
           sudo rm -rf ./_output
