fix windows runner arch to match real infra
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -163,7 +163,7 @@ jobs:
       fail-fast: false
       matrix:
         test-command: ["test-e2e-vm-serial", "test-e2e-container"]
-        arch: ["X64"]
+        arch: ["amd64"]
         runner-type: ["test"]
     uses: ./.github/workflows/e2e-windows.yaml
     secrets: inherit
