--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -15,7 +15,10 @@ on:
     paths:
       - '**.md'
       - 'contrib/**'
-      - '.github/CODEOWNERS'
+      - '!contrib/packaging/**'
+      - '.github/**'
+      - '!.github/workflows/ci.yaml'
+      - '!.github/workflows/e2e-*.yaml'
   pull_request:
     branches:
       - main
@@ -23,7 +26,9 @@ on:
       - '**.md'
       - 'contrib/**'
       - '!contrib/packaging/**'
-      - '.github/CODEOWNERS'
+      - '.github/**'
+      - '!.github/workflows/ci.yaml'
+      - '!.github/workflows/e2e-*.yaml'
 
 jobs:
   git-secrets:
@@ -32,10 +37,10 @@ jobs:
       - name: Pull latest awslabs/git-secrets repo
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
-           repository: awslabs/git-secrets
-           ref: 1.3.0
-           fetch-tags: true
-           path: git-secrets
+          repository: awslabs/git-secrets
+          ref: 1.3.0
+          fetch-tags: true
+          path: git-secrets
       - name: Install git secrets from source
         run: sudo make install
         working-directory: git-secrets
@@ -72,26 +77,42 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Skipping CI for docs & contrib files"
-  e2e-tests:
+  macos-e2e-tests:
     strategy:
       matrix:
         os:
           [
-            [self-hosted, macos, amd64, 13, test],
-            [self-hosted, macos, amd64, 14, test],
-            [self-hosted, macos, arm64, 13, test],
-            [self-hosted, macos, arm64, 14, test],
+            [13, test-e2e-container, X64, test],
+            [13, test-e2e-container, arm64, test],
+            [13, test-e2e-vm-serial, X64, test],
+            [13, test-e2e-vm-serial, arm64, test],
+            [14, test-e2e-container, X64, test],
+            [14, test-e2e-container, arm64, test],
+            [14, test-e2e-vm-serial, X64, test],
+            [14, test-e2e-vm-serial, arm64, test],
           ]
-        test-command: ['test-e2e-vm-serial', 'test-e2e-container']
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - run: echo "Skipping CI for docs & contrib files"
   windows-e2e-tests:
     strategy:
       matrix:
-        os: [[self-hosted, windows, amd64, test]]
-        test-command: ['test-e2e-vm-serial', 'test-e2e-container']
-    runs-on: ${{ matrix.os }}
+        os:
+          [[test-e2e-container, amd64, test], [test-e2e-vm-serial, amd64, test]]
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Skipping CI for docs & contrib files"
+  linux-e2e-tests:
+    strategy:
+      matrix:
+        os:
+          [
+            [amazonlinux, X64, 2, test-e2e-container, test],
+            [amazonlinux, X64, 2023, test-e2e-container, test],
+            [amazonlinux, arm64, 2, test-e2e-container, test],
+            [amazonlinux, arm64, 2023, test-e2e-container, test],
+          ]
+    runs-on: ubuntu-latest
     steps:
       - run: echo "Skipping CI for docs & contrib files"
   mdlint:
