update linux testing matrix to run all tests at once
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -107,10 +107,10 @@ jobs:
       matrix:
         os:
           [
-            [amazonlinux, X64, 2, test-e2e-container, test],
-            [amazonlinux, X64, 2023, test-e2e-container, test],
-            [amazonlinux, arm64, 2, test-e2e-container, test],
-            [amazonlinux, arm64, 2023, test-e2e-container, test],
+            [amazonlinux, X64, 2, test],
+            [amazonlinux, X64, 2023, test],
+            [amazonlinux, arm64, 2, test],
+            [amazonlinux, arm64, 2023, test],
           ]
     uses: ./.github/workflows/e2e-docs.yaml
     with:
