fix(linux): support bundles (#1101)
* fix(linux): support bundles

Signed-off-by: Justin Alvarez <alvajus@amazon.com>

* fix config file path

Signed-off-by: Justin Alvarez <alvajus@amazon.com>

* enable support bundle e2e tests

Signed-off-by: Justin Alvarez <alvajus@amazon.com>

* fix unit tests

Signed-off-by: Justin Alvarez <alvajus@amazon.com>

* fix linting

Signed-off-by: Justin Alvarez <alvajus@amazon.com>

---------

Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/e2e-linux.yaml
+++ b/.github/workflows/e2e-linux.yaml
@@ -94,6 +94,7 @@ jobs:
           # required by one of the tests which uses SSH_AUTH_SOCK
           eval "$(ssh-agent -s)"
           INSTALLED=true REGISTRY=${{ steps.vars.outputs.has_creds == true && env.REGISTRY || '' }} sudo -E make test-e2e-container
+          INSTALLED=true REGISTRY=${{ steps.vars.outputs.has_creds == true && env.REGISTRY || '' }} sudo -E make test-e2e-vm
       - name: Clean up repo AL2
         if: ${{ (startsWith(inputs.os, 'amazon') && inputs.version == '2' && always() ) }}
         run: |
