update ci conditions
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -16,6 +16,10 @@ on:
       - '**.md'
       - 'contrib/**'
       - '!contrib/packaging/**'
+      - 'docs/**'
+      - 'installer-builder/**'
+      - 'scripts/**'
+      - 'msi-builder/**'
       - '.github/**'
       - '!.github/workflows/e2e-macos.yaml'
       - '!.github/workflows/e2e-windows.yaml'
@@ -27,6 +31,10 @@ on:
       - '**.md'
       - 'contrib/**'
       - '!contrib/packaging/**'
+      - 'docs/**'
+      - 'installer-builder/**'
+      - 'scripts/**'
+      - 'msi-builder/**'
       - '.github/**'
       - '!.github/workflows/e2e-macos.yaml'
       - '!.github/workflows/e2e-windows.yaml'
