fix syntax error
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/ci-release.yaml
+++ b/.github/workflows/ci-release.yaml
@@ -267,4 +267,4 @@ jobs:
       arch: amd64
       output_arch: x86_64
       version: ${{ matrix.version }}
-      tag: ${{ needs.get-intermediate-version.outputs.version }
+      tag: ${{ needs.get-intermediate-version.outputs.version }}
