--- a/.github/workflows/ci-release.yaml
+++ b/.github/workflows/ci-release.yaml
@@ -190,6 +190,7 @@ jobs:
       outputs:
         version: ${{ steps.get-intermediate-version.version }}
       steps:
+        - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
         - name: Creates an intermediate version
           id: calculate-version
           run: |
