--- a/.github/workflows/ci-release.yaml
+++ b/.github/workflows/ci-release.yaml
@@ -188,7 +188,7 @@ jobs:
       name: Get intermediate version
       runs-on: ubuntu-latest
       outputs:
-        version: ${{ steps.get-intermediate-version.version }}
+        version: ${{ steps.calculate-version.version }}
       steps:
         - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
         - name: Gets an intermediate version string
