avoid cross-arch golicense installation
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/release-linux.yaml
+++ b/.github/workflows/release-linux.yaml
@@ -52,9 +52,10 @@ jobs:
       - name: Build
         run: |
           RELEASE_VERSION="${{ needs.get-tag-name.outputs.version }}"
+          make check-licenses download-licenses
           # static amd64
           export STATIC_AMD64_BINARY_NAME="finch-${RELEASE_VERSION}-linux-amd64-static.tar.gz"
-          GOARCH=amd64 STATIC=1 make release
+          GOARCH=amd64 STATIC=1 make
           pushd _output/
           touch "${STATIC_AMD64_BINARY_NAME}"
           tar --exclude "*.tar.gz" --exclude "*.tar.gz.sha256sum" -cvzf "${STATIC_AMD64_BINARY_NAME}" .
@@ -63,7 +64,7 @@ jobs:
           rm -rf ./_output/bin/
           # static arm64
           export STATIC_ARM64_BINARY_NAME="finch-${RELEASE_VERSION}-linux-arm64-static.tar.gz"
-          GOARCH=arm64 STATIC=1 make release
+          GOARCH=arm64 STATIC=1 make
           pushd _output/
           touch "${STATIC_ARM64_BINARY_NAME}"
           tar --exclude "*.tar.gz" --exclude "*.tar.gz.sha256sum" -cvzf "${STATIC_ARM64_BINARY_NAME}" .
