use ref instead of ref_name
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/get-version-and-tag-for-ref.yaml
+++ b/.github/workflows/get-version-and-tag-for-ref.yaml
@@ -39,7 +39,7 @@ jobs:
           if [ -n "${{ inputs.ref_name }}" ]; then
             tag=${{ inputs.ref_name }}
           else
-            tag=${{ github.ref_name }}
+            tag=${{ github.ref }}
           fi
           echo "tag=$tag" >> ${GITHUB_OUTPUT}
 
