--- a/.github/workflows/release-linux.yaml
+++ b/.github/workflows/release-linux.yaml
@@ -80,7 +80,7 @@ jobs:
       - name: Verify Release versions
         run: |
           mkdir -p ./_output/${{ env.RELEASE_VERSION }}/static/amd64
-          tar -xzf ./_output/${{ steps.build.outputs.STATIC_AMD64_BINARY_NAME }} -C ./_output/static/amd64
+          tar -xzf ./_output/${{ steps.build.outputs.STATIC_AMD64_BINARY_NAME }} -C ./_output/${{ env.RELEASE_VERSION }}/static/amd64
           STATIC_AMD64_BINARY_VERSION=$(./output/${{ env.RELEASE_VERSION }}/static/amd64/finch --version | grep -oP 'v\d+\.\d+\.\d+')
           export RELEASE_VERSION=${{ env.RELEASE_VERSION }}
           if [ "$STATIC_AMD64_BINARY_VERSION" != "$RELEASE_VERSION" ]; then
