--- a/.github/workflows/upload-build-to-S3.yaml
+++ b/.github/workflows/upload-build-to-S3.yaml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/setup-go@41dfa10bad2bb2ae585af6ee5bb4d7d973ad74ed # v5.1.0
         with:
           go-version-file: go.mod
-          cache: true
+          cache: false
       - name: Make macos aarch64 build
         run: |
           brew install lz4 automake autoconf libtool yq
@@ -53,7 +53,7 @@ jobs:
       - uses: actions/setup-go@41dfa10bad2bb2ae585af6ee5bb4d7d973ad74ed # v5.1.0
         with:
           go-version-file: go.mod
-          cache: true
+          cache: false
       - name: Make macos x86_64 build
         run: |
           brew install lz4 automake autoconf libtool yq
